--- a/index.html
+++ b/index.html
@@ -11,5 +11,58 @@
 
 <h1 id="pageTitle">3900 Activity 2 - Jordan Ames</h1>
 
+<br>
+<hr>
+<br>
+
+	<div id="divTable">
+		<div id="divTableRow">
+			<div id="leftDiv">
+				<section>
+					<img class="profilePic" src="img/profile.jpeg"/>
+				</section>
+			</div>
+			<div id="rightDiv">
+				<section>
+					<p>
+						Hi! My name is Jordan Ames. 
+						I am currently 26 years old and live in Omaha, Nebraska.
+						This sample webpage serves as an introduction to myself.
+					</p>
+					<br>
+					<h2>Career and Education:</h2>
+					<p>
+						I am returning to UNO for an undergraduate degree in MIS. 
+						I previously graduated from UNO in 2020 with a Bachelor's of Science in Cybersecurity.
+						Following my graduation, I found professional IT experience at Fiserv in a Systems Administrator role.
+						Then in 2023, Cobalt Credit Union offered me a position as a Systems Analyst.
+						This position has inspired my interest in the Information Systems field.
+						I plan to strengthen my career, knowledge, and skills through the MIS program.
+						I am very excited to continue learning!
+					</p>
+					<br>
+					<br>
+					<h2>Personal Life and Hobbies:</h2>
+					<p>
+						The image seen on this webpage is me and my wonderful partner Ell. 
+						I am incredibly lucky to be joined in life by such an amazing person. 
+						At home, I have 4 cats who always brighten my mood and never miss an opportunity to be crazy and cause chaos. 
+						Please check out my below link to learn more about each cat! 
+						In my free time, I enjoy video games, working out, bowling, and choir. 
+						I am currently on a break but normally sing in the Omaha Symphonic Chorus.
+						My friends and I love to compete in competitive bowling and attend local tournaments and leagues.
+					<p>
+					<br>
+					<h2>Additional Info:</h2>
+					<a href="cats.html">My Cat Family</a>
+				</section>
+			</div>
+		</div>
+	</div>
+<br>
+<hr>
+
+<footer id="pageFooter">This webpage was developed by Jordan Ames. February 2024.</footer>
+
 </body>
 </html>
