Created cats page
- Created cats.html
- Added additional external links to index

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 			</div>
 			<div id="rightDiv">
 				<section>
+					<h2>Introduction:</h2>
 					<p>
 						Hi! My name is Jordan Ames. 
 						I am currently 26 years old and live in Omaha, Nebraska.
 						This sample webpage serves as an introduction to myself.
 					</p>
-					<br>
+					<hr>
 					<h2>Career and Education:</h2>
 					<p>
 						I am returning to UNO for an undergraduate degree in MIS. 
@@ -40,11 +41,10 @@
 						I plan to strengthen my career, knowledge, and skills through the MIS program.
 						I am very excited to continue learning!
 					</p>
-					<br>
-					<br>
+					<hr>
 					<h2>Personal Life and Hobbies:</h2>
 					<p>
-						The image seen on this webpage is me and my wonderful partner Ell. 
+						The image seen on this webpage my wonderful partner Ell and I. 
 						I am incredibly lucky to be joined in life by such an amazing person. 
 						At home, I have 4 cats who always brighten my mood and never miss an opportunity to be crazy and cause chaos. 
 						Please check out my below link to learn more about each cat! 
@@ -52,9 +52,15 @@
 						I am currently on a break but normally sing in the Omaha Symphonic Chorus.
 						My friends and I love to compete in competitive bowling and attend local tournaments and leagues.
 					<p>
-					<br>
-					<h2>Additional Info:</h2>
-					<a href="cats.html">My Cat Family</a>
+					<hr>
+					<h2>Additional Links:</h2>
+					<table id="linkTable">
+						<tr>
+							<td class="notLastLink"><a href="cats.html">My Cat Family</a></td>
+							<td class="notLastLink"><a href="https://cobaltcu.com/" target="_blank">Cobalt Credit Union</a></td>
+							<td class="lastLink"><a href="https://www.omahasymphonicchorus.org/" target="_blank">Omaha Symphonic Chorus</a></td>
+						</tr>
+					</table>
 				</section>
 			</div>
 		</div>
