--- a/cats.html
+++ b/cats.html
@@ -9,7 +9,10 @@
 <body>
 <br>
 
-<h1 id="pageTitle">3900 Activity 2 - Jordan Ames</h1>
+<!-- Page Title -->
+<header>
+	<h1 id="pageTitle">3900 Activity 2 - Jordan Ames</h1>
+</header>
 
 <br>
 <hr>
@@ -19,6 +22,7 @@
 
 <div>
 	<section>
+		<!-- Images, captions, and bios of cats are arranged in a table for easy alignment -->
 		<table id="catTable">
 			<tr>
 				<td><img class="catPic" src="img/osa.jpeg"/></td>
