--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Link to custom CSS stylesheet -->
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css" media="screen,projection" >
 <head>
 	<meta charset="UTF-8">
@@ -9,12 +10,16 @@
 <body>
 <br>
 
-<h1 id="pageTitle">3900 Activity 2 - Jordan Ames</h1>
+<!-- Page Title -->
+<header>
+	<h1 id="pageTitle">3900 Activity 2 - Jordan Ames</h1>
+</header>
 
 <br>
 <hr>
 <br>
 
+	<!-- The following div structure creates a 40:60 split column-based body. Still needs work for mobile device compatibility -->
 	<div id="divTable">
 		<div id="divTableRow">
 			<div id="leftDiv">
